add results in text

--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -408,16 +408,18 @@ In this part, we report results from five experiments that tested whether an ass
 \caption{\label{fig:plot-bayes-meta-1}Effect of moral valence on RT and d'}
 \end{figure}
 
-For the \emph{d} prime, we found robust effect of moral character. Shapes associated with good character (``good person,'' ``kind person'' or a name associated with morally good behavioral history) has higher sensitivity (median = 2.49, 95\% HDI = {[}2.19 2.75{]}) than shapes associated with neutral character (median = 2.18, 95\% HDI = {[}1.90 2.48{]}), but we did not find differences between shapes associated with bad character (median = 2.23, 95\% HDI = {[}1.94 2.53{]}) and neutral character
+For the \emph{d} prime, we found robust effect of moral character. Shapes associated with good character (``good person,'' ``kind person'' or a name associated with morally good behavioral history) has higher sensitivity (median = 2.49, 95\% HDI = {[}2.19 2.75{]}) than shapes associated with neutral character (median = 2.18, 95\% HDI = {[}1.90 2.48{]}), \(median_{diff}\) = 0.31, 95\% HDI {[}0.02 0.63{]} , but we did not find differences between shapes associated with bad character (median = 2.23, 95\% HDI = {[}1.94 2.53{]}) and neutral character, \(median_{diff}\) = 0.05, 95\% HDI {[}-0.29 0.37{]}.
 
-For the reaction times, we also found robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good character has faster responses (median = 578.64, 95\% HDI = {[}508.15 661.14{]}) than shapes associated with neutral character (median = 623.45, 95\% HDI = {[}547.98 708.24{]}). We also found that the responses to shapes associated with bad character (median = 640.41, 95\% HDI = {[}559.94 719.63{]}) were slower as compared to the neutral character See Figure \ref{fig:plot-bayes-meta-1}.
+For the reaction times, we also found robust effect of moral character for both match trials (see figure \ref{fig:plot-bayes-meta-1} C) and nonmatch trials (\textbf{see supplementary materials}). For match trials, shapes associated with good character has faster responses (median = 578.64 ms, 95\% HDI = {[}508.15 661.14{]}) than shapes associated with neutral character (median = 623.45 ms, 95\% HDI = {[}547.98 708.24{]}), \(median_{diff}\) = -44.05, 95\% HDI {[}-59.96 -30.43{]}. We also found that the responses to shapes associated with bad character (median = 640.41 ms, 95\% HDI = {[}559.94 719.63{]}) were slower as compared to the neutral character, \(median_{diff}\) = 17.04, 95\% HDI {[}4.02 29.92{]}. See Figure \ref{fig:plot-bayes-meta-1}.
 
-For the nonmatch trials, we also found the advantage of good character: Shapes associated with good character (median = 653.21, 95\% HDI = {[}574.65 739.57{]}) are faster than shapes associated with neutral (median = 671.14, 95\% HDI = {[}591.71 760.09{]}) or bad character (median = 676.35, 95\% HDI = {[}599.13 767.76{]}), but the effect size was smaller (\textbf{see supplementary materials}).
+For the nonmatch trials, we also found the advantage of good character: Shapes associated with good character (median = 653.21 ms, 95\% HDI = {[}574.65 739.57{]}) are faster than shapes associated with neutral (median = 671.14 ms, 95\% HDI = {[}591.71 760.09{]}), \(median_{diff}\) = -17.65 ms, 95\% HDI {[}-23.85 -10.36{]}. Similarly, the shapes associated with bad character (median = 676.35 ms, 95\% HDI = {[}599.13 767.76{]}) was responded slower than shapes associated with neutral character, \(median_{diff}\) = 17.04 ms, 95\% HDI {[}4.02 29.92{]}, but the effect size was smaller, (\textbf{see supplementary materials}).
 
 \hypertarget{self-referential-process-modulate-prioritization-of-good-character}{%
 \subsection{Self-referential process modulate prioritization of good character}\label{self-referential-process-modulate-prioritization-of-good-character}}
 
-In this part, we report three experiments (3a, 3b, and 6b) that aimed at testing whether the moral valence effect found in the previous experiments is modulated by self-referential processes. These three experiments included data from 108 participants.
+In this part, we report results from three experiments (3a, 3b, and 6b) that aimed at testing whether the moral valence effect found in the previous experiments is modulated by self-referential processes. These three experiments included data from 108 participants.
+
+Because we have found that a facilitation effect of good character and slow-down effect of bad character in the first part, in this part, we will focus on the whether such effect interact with self-referential factor. In others words, we not only reported differences between good/bad character with neutral character for self-referential and other-referential separately, but also compare the differences between the difference.
 
 \begin{figure}
 \centering
@@ -425,9 +427,9 @@ In this part, we report three experiments (3a, 3b, and 6b) that aimed at testing
 \caption{\label{fig:plot-bayes2}Interaction between moral valence and self-referential}
 \end{figure}
 
-For the \emph{d} prime, we found that moral character effect only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (mean\_\{diff\} = ; 95\% HDI = {[}{]}), \emph{d} prime for good-self was also greater than good-other condition (mean\_\{diff\} = ; 95\% HDI = {[}{]}). The differences between bad-self and neutral-self, good-other and neutral-other, bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D). However, when comparing self- and other-referential on neutral and bad conditions, the \emph{d} prime was greater for other-referential conditions than self-referential conditions.
+For the \emph{d} prime, we found that an interaction between moral character effect and self-referential, the self- and other-referential difference was greater than zero for good vs.~neutral character differences (\(median_{diff}\) = 0.51; 95\% HDI = {[}-1.48 2.61{]}) but not for bad vs.~neutral differences (\(median_{diff}\) = -0.02; 95\% HDI = {[}-1.85 2.17{]}). Further analyses revealed that the good vs.~neutral character effect only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.56; 95\% HDI = {[}-1.05 2.15{]}), \emph{d} prime for good-self was also greater than good-other condition (\(median_{diff}\) = ; 95\% HDI = {[} {]}). The differences between bad-self and neutral-self, good-other and neutral-other, bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
 
-For the RTs part, we also found good-self prioritization effect, both compared with neutral-self () and good-other () conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \ref{fig:plot-bayes2}.
+For the RTs part, we also found the interaction between moral character and self-referential, the self- and other-referential differences was below zeor for the good vs.~neutral differences (\(median_{diff}\) = -110.23; 95\% HDI = {[}-587.40 307.33{]}) but not for the bad vs.~neutral differences (\(median_{diff}\) = -14.83; 95\% HDI = {[}-235.54 138.36{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -51.73; 95\% HDI = {[}-144.56 1.59{]}) and good-other (\(median_{diff}\) = -51.69; 95\% HDI = {[}-818.62 743.60{]}) conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \ref{fig:plot-bayes2}.
 
 \hypertarget{binding-the-good-and-self}{%
 \subsection{Binding the good and self}\label{binding-the-good-and-self}}
