--- a/Notebook_Pos_Self_Salience_APA.rmd
+++ b/Notebook_Pos_Self_Salience_APA.rmd
@@ -666,28 +666,21 @@ p_dprime1_diff <- df_m1_plot_sdt_diff %>%
                     nrow = 1,
                     labeller = label_parsed)
 
-
-# # plot the posterior of difference between c, supplementary figure
-# df_m1_plot_sdt_diff %>%
-#   dplyr::filter(str_detect(term_diff, '_c')) %>%
-#   dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
-#   ggplot2::ggplot(aes(y = condition, x = value, fill = stat(x > 0))) +
-#   tidybayes::stat_halfeye() +
-#   geom_vline(xintercept = 0, linetype = "dashed") +
-#   scale_fill_manual(values = c('gray80', 'skyblue')) +
-#   xlab("Valence effect on criterion in SDT") +
-#   facet_wrap( ~ term_diff, # scales = "free_y",
-#                nrow = 1,
-#                labeller = label_parsed)
-
-# posterior predictive check
-#pp_check(sdt_val_m1)
-#pp_sdt_val_m1 <- 
-#  brms::pp_check(sdt_val_m1, nsamples = 1e2) + 
-#  ggtitle("PPC sdt_val_m1") +
-#  theme_bw (base_size = 10) + 
-#  theme(legend.position = "none") +
-#  xlim(-0.5, 1.5)
+df_dprime1_diff_hdi <- df_m1_plot_sdt_diff %>%
+        dplyr::filter(str_detect(term_diff, '_dprm')) %>%
+        # dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
+        dplyr::filter(condition == "Overall") %>%
+        tidyr::pivot_wider(.,
+                           id_cols = c('.chain', '.iteration', '.draw'),
+                           names_from = term_diff) %>% 
+        dplyr::select(-c('.chain', '.iteration', '.draw')) %>%
+        bayestestR::describe_posterior(.,
+                                       ci = 0.95,
+                                       ci_method = 'hdi',
+                                       test = c("p_direction", "p_significance"),
+                                       centrality = "median") # %>%
+        # tidyr::separate(Parameter, c('Valence', 'Match')) %>% 
+        # dplyr::mutate(Valence = factor(Valence, levels = c('Good', 'Neutral', 'Bad')))
 ```
 
 ```{r first meta rt, echo=FALSE, results='hide', warning=FALSE}
@@ -914,6 +907,19 @@ p_rt1_diff <- df_m1_plot_rt_diff %>%
               # scales = "free_y", 
               nrow = 1,
               labeller = label_parsed)
+
+df_rt1_diff_hdi <- df_m1_plot_rt_diff %>%
+        # dplyr::filter(str_detect(term_diff, '_M')) %>%
+        dplyr::filter(condition == "Overall") %>%
+        tidyr::pivot_wider(.,
+                           id_cols = c('.chain', '.iteration', '.draw'),
+                           names_from = term_diff) %>%
+        dplyr::select(-c('.chain', '.iteration', '.draw')) %>%
+        bayestestR::describe_posterior(.,
+                                       ci = 0.95,
+                                       ci_method = 'hdi',
+                                       test = c("p_direction", "p_significance"),
+                                       centrality = "median")
 ```
 
   <!-- plot all graphs form the first part together -->
@@ -928,11 +934,11 @@ p_rt1 + p_dprime1 +
 #  ggsave('part1_plot_posterior.png', p, width = 15, height = 7.5)
 ```
 
-For the *d* prime, we found robust effect of moral character. Shapes associated with good character ("good person", "kind person" or a name associated with morally good behavioral history) has higher sensitivity (median = `r df_m1_std_fixed_effect$Median[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_std_fixed_effect$params == 'd prime']`, 95% HDI = [`r df_m1_std_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_std_fixed_effect$params == 'd prime']` `r df_m1_std_fixed_effect$CI_high[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_std_fixed_effect$params == 'd prime']`]) than shapes associated with neutral character (median = `r df_m1_std_fixed_effect$Median[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_std_fixed_effect$params == 'd prime']`, 95% HDI = [`r df_m1_std_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_std_fixed_effect$params == 'd prime']` `r df_m1_std_fixed_effect$CI_high[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_std_fixed_effect$params == 'd prime']`]), but we did not find differences between shapes associated with bad character (median = `r df_m1_std_fixed_effect$Median[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_std_fixed_effect$params == 'd prime']`, 95% HDI = [`r df_m1_std_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_std_fixed_effect$params == 'd prime']` `r df_m1_std_fixed_effect$CI_high[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_std_fixed_effect$params == 'd prime']`]) and neutral character
+For the *d* prime, we found robust effect of moral character. Shapes associated with good character ("good person", "kind person" or a name associated with morally good behavioral history) has higher sensitivity (median = `r df_m1_std_fixed_effect$Median[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_std_fixed_effect$params == 'd prime']`, 95% HDI = [`r df_m1_std_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_std_fixed_effect$params == 'd prime']` `r df_m1_std_fixed_effect$CI_high[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_std_fixed_effect$params == 'd prime']`]) than shapes associated with neutral character (median = `r df_m1_std_fixed_effect$Median[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_std_fixed_effect$params == 'd prime']`, 95% HDI = [`r df_m1_std_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_std_fixed_effect$params == 'd prime']` `r df_m1_std_fixed_effect$CI_high[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_std_fixed_effect$params == 'd prime']`]), $median_{diff}$ = `r df_dprime1_diff_hdi$Median[df_dprime1_diff_hdi$Parameter == 'diff_GN_dprm']`, 95% HDI [`r df_dprime1_diff_hdi$CI_low[df_dprime1_diff_hdi$Parameter == 'diff_GN_dprm']` `r df_dprime1_diff_hdi$CI_high[df_dprime1_diff_hdi$Parameter == 'diff_GN_dprm']`] , but we did not find differences between shapes associated with bad character (median = `r df_m1_std_fixed_effect$Median[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_std_fixed_effect$params == 'd prime']`, 95% HDI = [`r df_m1_std_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_std_fixed_effect$params == 'd prime']` `r df_m1_std_fixed_effect$CI_high[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_std_fixed_effect$params == 'd prime']`]) and neutral character, $median_{diff}$ = `r df_dprime1_diff_hdi$Median[df_dprime1_diff_hdi$Parameter == 'diff_BN_dprm']`, 95% HDI [`r df_dprime1_diff_hdi$CI_low[df_dprime1_diff_hdi$Parameter == 'diff_BN_dprm']` `r df_dprime1_diff_hdi$CI_high[df_dprime1_diff_hdi$Parameter == 'diff_BN_dprm']`].
 
-For the reaction times, we also found robust effect of moral character for both match trials (see figure \@ref(fig:plot-bayes-meta-1) C) and nonmatch trials (**see supplementary materials**). For match trials, shapes associated with good character has faster responses (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M']`, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M']`]) than shapes associated with neutral character (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M']`, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M']`]). We also found that the responses to shapes associated with bad character (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M']`, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M']`]) were slower as compared to the neutral character See Figure \@ref(fig:plot-bayes-meta-1).
+For the reaction times, we also found robust effect of moral character for both match trials (see figure \@ref(fig:plot-bayes-meta-1) C) and nonmatch trials (**see supplementary materials**). For match trials, shapes associated with good character has faster responses (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M']` ms, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'M']`]) than shapes associated with neutral character (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M']` ms, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'M']`]), $median_{diff}$ = `r df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_GN_M']`, 95% HDI [`r df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_GN_M']` `r df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_GN_M']`]. We also found that the responses to shapes associated with bad character (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M']` ms, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'M']`]) were slower as compared to the neutral character, $median_{diff}$ = `r df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_BN_M']`, 95% HDI [`r df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_BN_M']` `r df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_BN_M']`]. See Figure \@ref(fig:plot-bayes-meta-1).
 
-For the nonmatch trials, we also found the advantage of good character: Shapes associated with good character (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM']`, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM']`]) are faster than shapes associated with neutral (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM']`, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM']`]) or bad character (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM']`, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM']`]), but the effect size was smaller (**see supplementary materials**).
+For the nonmatch trials, we also found the advantage of good character: Shapes associated with good character (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM']` ms, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Good' & df_m1_rt_fixed_effect$Match == 'NM']`]) are faster than shapes associated with neutral (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM']` ms, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Neutral' & df_m1_rt_fixed_effect$Match == 'NM']`]), $median_{diff}$ = `r df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_GN_NM']` ms, 95% HDI [`r df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_GN_NM']` `r df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_GN_NM']`]. Similarly, the shapes associated with bad character (median = `r df_m1_rt_fixed_effect$Median[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM']` ms, 95% HDI = [`r df_m1_rt_fixed_effect$CI_low[df_m1_std_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM']` `r df_m1_rt_fixed_effect$CI_high[df_m1_rt_fixed_effect$Valence == 'Bad' & df_m1_rt_fixed_effect$Match == 'NM']`]) was responded slower than shapes associated with neutral character, $median_{diff}$ = `r df_rt1_diff_hdi$Median[df_rt1_diff_hdi$Parameter == 'diff_BN_M']` ms, 95% HDI [`r df_rt1_diff_hdi$CI_low[df_rt1_diff_hdi$Parameter == 'diff_BN_M']` `r df_rt1_diff_hdi$CI_high[df_rt1_diff_hdi$Parameter == 'diff_BN_M']`], but the effect size was smaller, (**see supplementary materials**).
 
 ```{r model comp for rt, eval = FALSE, echo=FALSE, results='hide' }
 #### model copmarison etc, will be in supplementary materials
@@ -1073,7 +1079,9 @@ df_m3_rt_plot %>%
 
 ## Self-referential process modulate prioritization of good character
 
-In this part, we report three experiments (3a, 3b, and 6b) that aimed at testing whether the moral valence effect found in the previous experiments is modulated by self-referential processes. These three experiments included  data from 108 participants.
+In this part, we report results from three experiments (3a, 3b, and 6b) that aimed at testing whether the moral valence effect found in the previous experiments is modulated by self-referential processes. These three experiments included  data from 108 participants. 
+
+Because we have found that a facilitation effect of good character and slow-down effect of bad character in the first part, in this part, we will focus on the whether such effect interact with self-referential factor. In others words, we not only reported differences between good/bad character with neutral character for self-referential and other-referential separately, but also compare the differences between the difference.
 
 ```{r prepare data for second meta, echo=FALSE, results='hide', warning=FALSE}
 ### try meta-analysis 1a, 1b, 1c, 2, 5 and 6a
@@ -1255,19 +1263,34 @@ df_ms_sdt_m1_plot_diff <- df_ms_sdt_m1_plot %>%
                 diff_BN_dprm_O = dprime_Other_Bad - dprime_Other_Neutral,
                 diff_SO_dprm_G = dprime_Self_Good - dprime_Other_Good,
                 diff_SO_dprm_N =  dprime_Self_Neutral - dprime_Other_Neutral,
-                diff_SO_dprm_B =  dprime_Self_Bad - dprime_Other_Bad
+                diff_SO_dprm_B =  dprime_Self_Bad - dprime_Other_Bad,
+                diff_diff_GN = diff_GN_dprm_S - diff_GN_dprm_O,
+                diff_diff_BN = diff_BN_dprm_S - diff_BN_dprm_O
                 ) %>%
   dplyr::select(condition, `.chain`, `.iteration`, `.draw`,
                diff_GN_dprm_S, diff_BN_dprm_S, diff_GN_dprm_O, diff_BN_dprm_O,
-               diff_SO_dprm_G, diff_SO_dprm_N, diff_SO_dprm_B) %>%
-  tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_SO_dprm_B, names_to = "term_diff", values_to =  "value") %>%  # wide to long
-  dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_dprm_S', 'diff_BN_dprm_S', 'diff_GN_dprm_O', 'diff_BN_dprm_O',
-                                                         'diff_SO_dprm_G', 'diff_SO_dprm_N', 'diff_SO_dprm_B')))
+               diff_SO_dprm_G, diff_SO_dprm_N, diff_SO_dprm_B, diff_diff_GN, diff_diff_BN) 
+
+df_ms_dprm1_diff_diff <- df_ms_sdt_m1_plot_diff %>%
+        tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_diff_BN, names_to = "term_diff", values_to =  "value") %>%  # wide to long
+        dplyr::filter(str_detect(term_diff, 'diff_diff')) %>%
+        dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_diff_GN', 'diff_diff_BN'))) %>% 
+        dplyr::filter(condition == "Overall") %>%
+        tidyr::pivot_wider(.,
+                           id_cols = c('.chain', '.iteration', '.draw'),
+                           names_from = term_diff) %>%
+        dplyr::select(-c('.chain', '.iteration', '.draw')) %>%
+        bayestestR::describe_posterior(.,
+                                       ci = 0.95,
+                                       ci_method = 'hdi',
+                                       test = c("p_direction", "p_significance"),
+                                       centrality = "median")
 
 p_ms_dprime1_diff_val <- df_ms_sdt_m1_plot_diff %>%
+        tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_diff_BN, names_to = "term_diff", values_to =  "value") %>%  # wide to long
         dplyr::filter(str_detect(term_diff, '_dprm_S|_dprm_O')) %>%
-        #dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
-        # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
+        dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_dprm_S', 'diff_BN_dprm_S', 
+                                                               'diff_GN_dprm_O', 'diff_BN_dprm_O'))) %>%
         dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
         dplyr::rename(Experiments = condition) %>%
         ggplot2::ggplot(aes(y = Experiments, x = value, fill = stat(x > 0))) +
@@ -1282,8 +1305,24 @@ p_ms_dprime1_diff_val <- df_ms_sdt_m1_plot_diff %>%
                nrow = 1,
                labeller = label_parsed)
 
+df_ms_dprm1_diff_val <- df_ms_sdt_m1_plot_diff %>%
+        tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_diff_BN, names_to = "term_diff", values_to =  "value") %>%  # wide to long
+        dplyr::filter(str_detect(term_diff, '_dprm_S|_dprm_O')) %>%
+        dplyr::filter(condition == "Overall") %>%
+        tidyr::pivot_wider(.,
+                           id_cols = c('.chain', '.iteration', '.draw'),
+                           names_from = term_diff) %>%
+        dplyr::select(-c('.chain', '.iteration', '.draw')) %>%
+        bayestestR::describe_posterior(.,
+                                       ci = 0.95,
+                                       ci_method = 'hdi',
+                                       test = c("p_direction", "p_significance"),
+                                       centrality = "median")
+
 p_ms_dprime1_diff_id <- df_ms_sdt_m1_plot_diff %>%
+        tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_diff_BN, names_to = "term_diff", values_to =  "value") %>%  # wide to long
         dplyr::filter(str_detect(term_diff, '_SO_')) %>%
+        dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_SO_dprm_G', 'diff_SO_dprm_N', 'diff_SO_dprm_B'))) %>%
         #dplyr::filter(!str_detect(term_diff, '_GB_')) %>%
         # tidyr::unite(term_diff, c('Identity', 'term_diff')) %>%
         dplyr::filter((value >= -1.5) & (value <= 1.5)) %>%
@@ -1299,6 +1338,21 @@ p_ms_dprime1_diff_id <- df_ms_sdt_m1_plot_diff %>%
         facet_wrap( ~ term_diff, # scales = "free_y",
                nrow = 1,
                labeller = label_parsed)
+
+df_ms_dprm1_diff_id <- df_ms_sdt_m1_plot_diff %>%
+        tidyr::pivot_longer(cols = diff_GN_dprm_S:diff_diff_BN, names_to = "term_diff", values_to =  "value") %>%  # wide to long
+        dplyr::filter(str_detect(term_diff, '_SO_')) %>%
+#        dplyr::filter(str_detect(term_diff, '_dprm_S|_dprm_O')) %>%
+        dplyr::filter(condition == "Overall") %>%
+        tidyr::pivot_wider(.,
+                           id_cols = c('.chain', '.iteration', '.draw'),
+                           names_from = term_diff) %>%
+        dplyr::select(-c('.chain', '.iteration', '.draw')) %>%
+        bayestestR::describe_posterior(.,
+                                       ci = 0.95,
+                                       ci_method = 'hdi',
+                                       test = c("p_direction", "p_significance"),
+                                       centrality = "median")
 # plot the posterior of difference between c, supplementary figure
 # df_ms_sdt_m1_plot_diff %>%
 #   dplyr::filter(str_detect(term_diff, '_c')) %>%
@@ -1468,17 +1522,35 @@ df_ms_m1_plot_rt_diff <- df_ms_m1_plot_rt %>%
                       diff_BN_M_O = M_Other_Bad - M_Other_Neutral,
                       diff_SO_G   = M_Self_Good - M_Other_Good, 
                       diff_SO_N   = M_Self_Neutral - M_Other_Neutral,
-                      diff_SO_B   = M_Self_Bad - M_Other_Bad) %>%
+                      diff_SO_B   = M_Self_Bad - M_Other_Bad,
+                      diff_diff_GN = diff_GN_M_S - diff_GN_M_O,
+                      diff_diff_BN = diff_BN_M_S - diff_BN_M_O) %>%
         dplyr::select(condition, `.chain`, `.iteration`, `.draw`,
                       diff_GN_M_S, diff_BN_M_S, diff_GN_M_O,
-                      diff_BN_M_O, diff_SO_G, diff_SO_N, diff_SO_B) %>%
-        tidyr::pivot_longer(cols = diff_GN_M_S:diff_SO_B, names_to = "term_diff", values_to =  "value")  %>%  # wide to long
-        dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_M_S','diff_BN_M_S', 'diff_GN_M_O', 'diff_BN_M_O',
-                                                                'diff_SO_G', 'diff_SO_N', 'diff_SO_B')))
+                      diff_BN_M_O, diff_SO_G, diff_SO_N, diff_SO_B,
+                      diff_diff_GN, diff_diff_BN) #  %>%
+
+df_ms_rt1_diff_diff <- df_ms_m1_plot_rt_diff %>%
+        tidyr::pivot_longer(cols = diff_GN_M_S:diff_diff_BN, names_to = "term_diff", values_to =  "value") %>%  # wide to long
+        dplyr::filter(str_detect(term_diff, 'diff_diff')) %>%
+        dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_diff_GN', 'diff_diff_BN'))) %>% 
+        dplyr::filter(condition == "Overall") %>%
+        tidyr::pivot_wider(.,
+                           id_cols = c('.chain', '.iteration', '.draw'),
+                           names_from = term_diff) %>%
+        dplyr::select(-c('.chain', '.iteration', '.draw')) %>%
+        bayestestR::describe_posterior(.,
+                                       ci = 0.95,
+                                       ci_method = 'hdi',
+                                       test = c("p_direction", "p_significance"),
+                                       centrality = "median")
 
 # plot the posterior of matching trials of valence
 p_ms_rt1_diff_val <- df_ms_m1_plot_rt_diff %>%
+        tidyr::pivot_longer(cols = diff_GN_M_S:diff_SO_B, names_to = "term_diff", values_to =  "value")  %>%  # wide to long
         dplyr::filter(str_detect(term_diff, '_M_')) %>%
+        dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_GN_M_S','diff_BN_M_S', 
+                                                               'diff_GN_M_O', 'diff_BN_M_O'))) %>%
         dplyr::filter((value >= -200) & (value <= 200)) %>%
         dplyr::rename(Experiments = condition) %>%
         ggplot2::ggplot(aes(y = Experiments, x = value, fill = stat(x < 0))) +
@@ -1494,9 +1566,25 @@ p_ms_rt1_diff_val <- df_ms_m1_plot_rt_diff %>%
               nrow = 1,
               labeller = label_parsed)
 
+df_ms_rt1_diff_val <- df_ms_m1_plot_rt_diff %>%
+        tidyr::pivot_longer(cols = diff_GN_M_S:diff_SO_B, names_to = "term_diff", values_to =  "value")  %>%  # wide to long
+        dplyr::filter(str_detect(term_diff, '_M_')) %>%
+        dplyr::filter(condition == "Overall") %>%
+        tidyr::pivot_wider(.,
+                           id_cols = c('.chain', '.iteration', '.draw'),
+                           names_from = term_diff) %>%
+        dplyr::select(-c('.chain', '.iteration', '.draw')) %>%
+        bayestestR::describe_posterior(.,
+                                       ci = 0.95,
+                                       ci_method = 'hdi',
+                                       test = c("p_direction", "p_significance"),
+                                       centrality = "median")
+
 # plot the posterior of matching trials, diff between self and other
 p_ms_rt1_diff_id <- df_ms_m1_plot_rt_diff %>%
+        tidyr::pivot_longer(cols = diff_GN_M_S:diff_SO_B, names_to = "term_diff", values_to =  "value")  %>%  # wide to long
         dplyr::filter(str_detect(term_diff, '_SO_')) %>%
+        dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_SO_G', 'diff_SO_N', 'diff_SO_B'))) %>%
         dplyr::filter((value >= -200) & (value <= 200)) %>%
         dplyr::rename(Experiments = condition) %>%
         ggplot2::ggplot(aes(y = Experiments, x = value, fill = stat(x < 0))) +
@@ -1511,6 +1599,21 @@ p_ms_rt1_diff_id <- df_ms_m1_plot_rt_diff %>%
               # scales = "free_y", 
               nrow = 1,
               labeller = label_parsed)
+
+df_ms_rt1_diff_id <- df_ms_m1_plot_rt_diff %>%
+        tidyr::pivot_longer(cols = diff_GN_M_S:diff_SO_B, names_to = "term_diff", values_to =  "value")  %>%  # wide to long
+        dplyr::filter(str_detect(term_diff, '_SO_')) %>%
+        dplyr::mutate(term_diff = factor(term_diff, levels = c('diff_SO_G', 'diff_SO_N', 'diff_SO_B'))) %>%
+        dplyr::filter(condition == "Overall") %>%
+        tidyr::pivot_wider(.,
+                           id_cols = c('.chain', '.iteration', '.draw'),
+                           names_from = term_diff) %>%
+        dplyr::select(-c('.chain', '.iteration', '.draw')) %>%
+        bayestestR::describe_posterior(.,
+                                       ci = 0.95,
+                                       ci_method = 'hdi',
+                                       test = c("p_direction", "p_significance"),
+                                       centrality = "median")
 ```
 
 ```{r plot-bayes2, fig.cap="Interaction between moral valence and self-referential", fig.height=12, fig.width=15, warning=FALSE}
@@ -1521,9 +1624,9 @@ p_ms_rt1 + p_ms_dprime1 +
         p_ms_rt1_diff_id + p_ms_dprime1_diff_id +  plot_annotation(tag_levels = 'A')  + plot_layout(nrow = 3, byrow = TRUE, guides = "collect")
 ```
 
-For the *d* prime, we found that moral character effect only appeared for self-referential conditions but not other-referential conditions. The estimated *d* prime for good-self was greater than neutral-self (mean_{diff} = ; 95% HDI = []), *d* prime for good-self was also greater than good-other condition (mean_{diff} = ; 95% HDI = []). The differences between bad-self and neutral-self, good-other and neutral-other, bad-other and neutral-other are all centered around zero (see Figure \@ref(fig:plot-bayes2), B, D). However, when comparing self- and other-referential on neutral and bad conditions, the *d* prime was greater for other-referential conditions than self-referential conditions.
+For the *d* prime, we found that an interaction between moral character effect and self-referential, the self- and other-referential difference was greater than zero for good vs. neutral character differences ($median_{diff}$ = `r df_ms_dprm1_diff_diff$Median[df_ms_dprm1_diff_diff$Parameter == 'diff_diff_GN']`; 95% HDI = [`r df_ms_dprm1_diff_diff$CI_low[df_ms_dprm1_diff_diff$Parameter == 'diff_diff_GN']` `r df_ms_dprm1_diff_diff$CI_high[df_ms_dprm1_diff_diff$Parameter == 'diff_diff_GN']`]) but not for bad vs. neutral differences ($median_{diff}$ = `r df_ms_dprm1_diff_diff$Median[df_ms_dprm1_diff_diff$Parameter == 'diff_diff_BN']`; 95% HDI = [`r df_ms_dprm1_diff_diff$CI_low[df_ms_dprm1_diff_diff$Parameter == 'diff_diff_BN']` `r df_ms_dprm1_diff_diff$CI_high[df_ms_dprm1_diff_diff$Parameter == 'diff_diff_BN']`]). Further analyses revealed that the good vs. neutral character effect only appeared for self-referential conditions but not other-referential conditions. The estimated *d* prime for good-self was greater than neutral-self ($median_{diff}$ = `r df_ms_dprm1_diff_val$Median[df_ms_dprm1_diff_val$Parameter == 'diff_GN_dprm_S']`; 95% HDI = [`r df_ms_dprm1_diff_val$CI_low[df_ms_dprm1_diff_val$Parameter == 'diff_GN_dprm_S']` `r df_ms_dprm1_diff_val$CI_high[df_ms_dprm1_diff_val$Parameter == 'diff_GN_dprm_S']`]), *d* prime for good-self was also greater than good-other condition ($median_{diff}$ = `r df_ms_dprm1_diff_id$Median[df_ms_dprm1_diff_val$Parameter == 'diff_SO_dprm_G']`; 95% HDI = [`r df_ms_dprm1_diff_val$CI_low[df_ms_dprm1_diff_val$Parameter == 'diff_SO_dprm_G']` `r df_ms_dprm1_diff_val$CI_high[df_ms_dprm1_diff_val$Parameter == 'diff_SO_dprm_G']`]). The differences between bad-self and neutral-self, good-other and neutral-other, bad-other and neutral-other are all centered around zero (see Figure \@ref(fig:plot-bayes2), B, D). 
 
-For the RTs part, we also found good-self prioritization effect, both compared with neutral-self () and good-other () conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \@ref(fig:plot-bayes2).
+For the RTs part, we also found the interaction between moral character and self-referential, the self- and other-referential differences was below zeor for the good vs. neutral differences ($median_{diff}$ = `r df_ms_rt1_diff_diff$Median[df_ms_rt1_diff_diff$Parameter == 'diff_diff_GN']`; 95% HDI = [`r df_ms_rt1_diff_diff$CI_low[df_ms_rt1_diff_diff$Parameter == 'diff_diff_GN']` `r df_ms_rt1_diff_diff$CI_high[df_ms_rt1_diff_diff$Parameter == 'diff_diff_GN']`]) but not for the bad vs. neutral differences ($median_{diff}$ = `r df_ms_rt1_diff_diff$Median[df_ms_rt1_diff_diff$Parameter == 'diff_diff_BN']`; 95% HDI = [`r df_ms_rt1_diff_diff$CI_low[df_ms_rt1_diff_diff$Parameter == 'diff_diff_BN']` `r df_ms_rt1_diff_diff$CI_high[df_ms_rt1_diff_diff$Parameter == 'diff_diff_BN']`]). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self ($median_{diff}$ = `r df_ms_rt1_diff_val$Median[df_ms_rt1_diff_val$Parameter == 'diff_GN_M_S']`; 95% HDI = [`r df_ms_rt1_diff_val$CI_low[df_ms_rt1_diff_val$Parameter == 'diff_GN_M_S']` `r df_ms_rt1_diff_val$CI_high[df_ms_rt1_diff_val$Parameter == 'diff_GN_M_S']`]) and good-other ($median_{diff}$ = `r df_ms_rt1_diff_id$Median[df_ms_rt1_diff_id$Parameter == 'diff_SO_G']`; 95% HDI = [`r df_ms_rt1_diff_id$CI_low[df_ms_rt1_diff_id$Parameter == 'diff_SO_G']` `r df_ms_rt1_diff_id$CI_high[df_ms_rt1_diff_id$Parameter == 'diff_SO_G']`]) conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \@ref(fig:plot-bayes2).
 
 ## Binding the good and self
 
