--- a/Notebook_Pos_Self_Salience_APA.tex
+++ b/Notebook_Pos_Self_Salience_APA.tex
@@ -429,18 +429,18 @@ Because we have found that a facilitation effect of good character and slow-down
 
 For the \emph{d} prime, we found that an interaction between moral character effect and self-referential, the self- and other-referential difference was greater than zero for good vs.~neutral character differences (\(median_{diff}\) = 0.51; 95\% HDI = {[}-1.48 2.61{]}) but not for bad vs.~neutral differences (\(median_{diff}\) = -0.02; 95\% HDI = {[}-1.85 2.17{]}). Further analyses revealed that the good vs.~neutral character effect only appeared for self-referential conditions but not other-referential conditions. The estimated \emph{d} prime for good-self was greater than neutral-self (\(median_{diff}\) = 0.56; 95\% HDI = {[}-1.05 2.15{]}), \emph{d} prime for good-self was also greater than good-other condition (\(median_{diff}\) = ; 95\% HDI = {[} {]}). The differences between bad-self and neutral-self, good-other and neutral-other, bad-other and neutral-other are all centered around zero (see Figure \ref{fig:plot-bayes2}, B, D).
 
-For the RTs part, we also found the interaction between moral character and self-referential, the self- and other-referential differences was below zeor for the good vs.~neutral differences (\(median_{diff}\) = -110.23; 95\% HDI = {[}-587.40 307.33{]}) but not for the bad vs.~neutral differences (\(median_{diff}\) = -14.83; 95\% HDI = {[}-235.54 138.36{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -51.73; 95\% HDI = {[}-144.56 1.59{]}) and good-other (\(median_{diff}\) = -51.69; 95\% HDI = {[}-818.62 743.60{]}) conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \ref{fig:plot-bayes2}.
+For the RTs part, we also found the interaction between moral character and self-referential, the self- and other-referential differences was below zero for the good vs.~neutral differences (\(median_{diff}\) = -110.23; 95\% HDI = {[}-587.40 307.33{]}) but not for the bad vs.~neutral differences (\(median_{diff}\) = -14.83; 95\% HDI = {[}-235.54 138.36{]}). Further analyses revealed a robust good-self prioritization effect as compared to neutral-self (\(median_{diff}\) = -51.73; 95\% HDI = {[}-144.56 1.59{]}) and good-other (\(median_{diff}\) = -51.69; 95\% HDI = {[}-818.62 743.60{]}) conditions. Also, we found that both good character and bad character were responded slower than neutral character when it was other-referential. See Figure \ref{fig:plot-bayes2}.
 
 \hypertarget{binding-the-good-and-self}{%
 \subsection{Binding the good and self}\label{binding-the-good-and-self}}
 
 In this part, we reported two studies in which the moral valence or the self-referential processing is not task-relevant. We are interested in testing whether the task-relevance modulated the effect observed in previous experiment.
 
-For the task relevant part, we found self-related conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times.
+In experiment 4a, where self- and other-referential were task-relevant and moral character are task-irrelevant. We found self-related conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times. This pattern is consistent with previous studies (e.g., Sui, He, and Humphreys (2012)).
 
-Most importantly, we found evidence, albeit weak, that task-irrelevant moral valence also played an role. The \emph{d} prime is greater when shapes were associated with good self condition than with neutral self (BF = 4.4) or bad self (3.1), but shapes associated with bad self and neutral self didn't show differences. In contrast the \emph{d} prime was smaller when shapes were associated with good other than with neutral other or bad other. See Figure \ref{fig:plot-exp4-all}.
+More importantly, we found evidence, albeit weak, that task-irrelevant moral character also played an role. For shapes associated with self, \emph{d'} was greater when shapes had a good character inside the shape (median = 2.83, 95\% HDI {[}2.63 3.01{]}) than shapes that have neutral character (median = 2.74, 95\% HDI {[}2.58 2.95{]}, BF = 4.4) or bad character (median = 2.76, 95\% HDI {[}2.56 2.95{]}, 3.1), but we did not found difference between shapes with bad character and neutral character inside for the self-referential shapes. For shapes associated with other, the results of \emph{d'} revealed a reversed pattern to the self-referential condition: \emph{d} prime was smaller when shapes had a good character inside (median = 1.87, 95\% HDI {[}1.71 2.04{]}) than had neutral (median = 1.96, 95\% HDI {[}1.80 2.14{]}) or bad character (median = 1.98, 95\% HDI {[}1.79 2.17{]}) inside. See Figure \ref{fig:plot-exp4-all}.
 
-The same pattern was found for RTs. For self-referntial condition, when good character was presented as a task-irrelevant stimuli, the responds were facilitated. This effect was reversed for other-referential condition.
+The same pattern was found for RTs. For self-referential condition, when good character was presented as a task-irrelevant stimuli, the responds (median = 641, 95\% HDI {[}623 662{]}) were faster than when neutral character (median = 649, 95\% HDI {[}631 668{]}) or bad character (median = 648, 95\% HDI {[}628 667{]}) were inside. This effect was reversed for other-referential condition: shapes associated with other with good character inside (median = 733, 95\% HDI {[}711 754{]}) were slower than with neutral character (median = 721, 95\% HDI {[}702 741{]}) or bad character (median = 718, 95\% HDI {[}696 740{]}) inside.
 
 \begin{figure}
 \centering
@@ -448,12 +448,20 @@ The same pattern was found for RTs. For self-referntial condition, when good cha
 \caption{\label{fig:plot-exp4-all}exp4: Results of Bayesian GLM analysis.}
 \end{figure}
 
-In this task, we found shapes associated with good person conditions were performed better than other-related conditions, on both \emph{d} prime and reaction times.
+In experiment 4b, moral character was the task-relevant factor, and we found that there were main effect of moral character: shapes associated with good character were performed better than other-related conditions, on both \emph{d'} and reaction times.
 
-Most importantly, we found evidence, that task-irrelevant self-relevance also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside as task-irrelevant stimuli than with ``other'' inside (\(mean_{dfiff}\) = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with ``neutral'' (\(mean_{dfiff}\) = 0.04, 95\% CI {[}-.11, .18{]}) or ``bad'' person (\(mean_{dfiff}\) = -.05, 95\% CI{[}-.18, .09{]}). The same trend appear for the RT data. For shapes associated with good person, an ``self'' inside will reduce the RTs as compared with when a ``other'' inside the shape (\(mean_{dfiff}\) = -55 ms, 95\%CI{[}-75, -35{]}, p \textless{} 0.0001), but this effect did not occur when the shapes were associated neutral (\(mean_{dfiff}\) = 10, 95\% CI {[}1, 20{]}) or bad (\(mean_{dfiff}\) = 5, 95\%CI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
+Most importantly, we found evidence that task-irrelevant self-referential process also played an role. For shapes associated with good person, the \emph{d} prime was greater when shapes had an ``self'' inside than with ``other'' inside (\(mean_{diff}\) = 0.14, 95\% credible intervals {[}-0.02, 0.31{]}, BF = 12.07, p = 0.92), but this effect did not happen when the target shape where associated with ``neutral'' (\(mean_{diff}\) = 0.04, 95\% CI {[}-.11, .18{]}) or ``bad'' person (\(mean_{diff}\) = -.05, 95\% CI{[}-.18, .09{]}).
+
+The same trend appeared for the RT data. For shapes associated with good person, with a ``self'' inside the shape reduced the reaction times as compared with when a ``other'' inside the shape (\(mean_{diff}\) = -55 ms, 95\%CI{[}-75, -35{]}), but this effect did not occur when the shapes were associated neutral (\(mean_{diff}\) = 10, 95\% CI {[}1, 20{]}) or bad (\(mean_{diff}\) = 5, 95\%CI {[}-16, 27{]}) person. See Figure \ref{fig:plot-exp4-all}.
 
 \hypertarget{self-reported-personal-distance}{%
 \subsection{Self-reported personal distance}\label{self-reported-personal-distance}}
+
+\begin{figure}
+\centering
+\includegraphics{Notebook_Pos_Self_Salience_APA_files/figure-latex/plot-person-dist-1.pdf}
+\caption{\label{fig:plot-person-dist}Self-rated personal distance}
+\end{figure}
 
 See Figure \ref{fig:plot-person-dist}.
 
@@ -477,7 +485,7 @@ We also explored the correlation between behavioral data and questionnaire score
 \hypertarget{discussion}{%
 \section{Discussion}\label{discussion}}
 
-In a series of experiments, we found that (1) good character are prioritized in perceptual matching task; (2) this effect was robust when moral characters are self-referential but not stranger-referential; (3) the self-good character combination, whether task-relevant or not, facilitate the process but other-good character combination didn't have this effect, if not reverse. The self-reported mental distance scale also showed that people rated self has longer distance to bad character.
+In a series of experiments, we found that (1) good character are prioritized in perceptual matching task; (2) this effect was robust when moral characters are self-referential but not stranger-referential; (3) when the self-good character combined, whether task-relevant or not, participants responded faster and more accurately than when other-good character were combined. The other-good character combination might slow down the responses. The self-reported mental distance scale also showed that people rated self has longer distance to bad character.
 
 {[}direct evidence for moral character in perception{]}
 
